--- a/views/new_space.erb
+++ b/views/new_space.erb
@@ -1,8 +1,18 @@
 <form action="/spaces" method="post">
-  <input type="text" name="name" />
-  <input type="text" name="description" />
-  <input type="text" name="price_per_night" />
-  <input type="text" name="available_from" />
-  <input type="text" name="available_to" />
+  <label> House Name 
+    <input type="text" name="name" />
+  </label>
+  <label> Description of house
+    <input type="text" name="description" />
+  </label>
+  <label> Price Per Night
+    <input type="text" name="price_per_night" />
+  </label>
+  <label> Date Available From 
+    <input type="text" name="available_from" />
+  </label>
+  <label> Date Available To 
+    <input type="text" name="available_to" />
+  </label>
   <input type="submit" value="Submit" />
 </form>
