post route for spaces/1 to confirm date is available

--- a/views/view_available_space.erb
+++ b/views/view_available_space.erb
@@ -1,4 +1,4 @@
-<form>
+<form action="/spaces/1" method="post">
   <label>Date
     <input type="text" name="date" />
     <input type="submit" value="Submit" />
