--- a/views/new_space.erb
+++ b/views/new_space.erb
@@ -1,18 +1,27 @@
 <form action="/spaces" method="post">
   <label> House Name 
     <input type="text" name="name" />
-  </label>
+  </label><br>
+
   <label> Description of house
     <input type="text" name="description" />
-  </label>
+  </label><br>
+
   <label> Price Per Night
     <input type="text" name="price_per_night" />
-  </label>
-  <label> Date Available From 
-    <input type="text" name="available_from" />
-  </label>
-  <label> Date Available To 
-    <input type="text" name="available_to" />
-  </label>
+  </label><br>
+
+  <label for="start">Date available from date:</label>
+    <input type="date" id="start" name="trip-start"
+       value="2018-07-22"
+       min="2021-08-18" max="2030-12-31">
+  </label><br>
+
+  <label for="start">Date available to:</label>
+    <input type="date" id="end" name="trip-start"
+       value="2018-07-22"
+       min="2021-08-18" max="2030-12-31">
+  </label><br>
+  
   <input type="submit" value="Submit" />
 </form>
