--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -57,7 +57,7 @@
     </div>
   </div>
   <div class="col-12">
-    <button class="btn btn-primary" type="submit">Submit form</button>
+    <button class="btn btn-primary" type="submit">Sign up/button>
   </div>
 
   </form>
