--- a/views/spaces.erb
+++ b/views/spaces.erb
@@ -1,11 +1,11 @@
 
 <%= @space %> 
 
-# <ul>
-#   <% @space.each do |space| %>
-#     <li> 
-#       <a <%= space.name %> >
-#       </a>
-#     </li>
-#   <% end %>
-# </ul
+<ul>
+  <% @space.each do |space| %>
+    <li> 
+      <a <%= space.name %> >
+      </a>
+    </li>
+  <% end %>
+</ul
