--- a/views/spaces.erb
+++ b/views/spaces.erb
@@ -1,8 +1,11 @@
-<div>
-<% @space.each_with_index do |space, index| %>
-  <table>
-  <tr>
-  <td style=“text-align: center”>  Name: <%= @space  %> </td>
-  </tr>
+
+
+<ul>
+  <% @space.each do |space| %>
+    <li>
+     <%= space.name %>
+    </li>
   <% end %>
-</div>
+</ul>
+
+
