--- a/views/new_space.erb
+++ b/views/new_space.erb
@@ -12,13 +12,13 @@
   </label><br>
 
   <label for="start">Date available from date:</label>
-    <input type="date" id="start" name="trip-start"
+    <input type="date" id="start" name="available_from"
        value="2018-07-22"
        min="2021-08-18" max="2030-12-31">
   </label><br>
 
   <label for="start">Date available to:</label>
-    <input type="date" id="end" name="trip-start"
+    <input type="date" id="end" name="available_to"
        value="2018-07-22"
        min="2021-08-18" max="2030-12-31">
   </label><br>
