started request form

--- a/views/spaces.erb
+++ b/views/spaces.erb
@@ -3,7 +3,8 @@
 <ul>
   <% @space.each do |space| %>
     <li>
-     <%= space.name %>
+     <%= space.name %><br>
+     <%= space.description %>
     </li>
   <% end %>
 </ul>
