--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -9,12 +9,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="public/stylesheet.css">
+    <link rel="stylesheet" href="/stylesheet.css" type="text/css">
     <title>MakersBnB!</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-sm navbar-light">
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Collapsible wrapper -->
@@ -49,7 +49,7 @@
         <form action="/newaccount " method=post
             oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match. " : " ")'
             class="signup_form ">
-            <img id="logo" src="public/img/tojam.jpg" alt="to jam logo">
+            <img id="logo" src="/img/tojam.jpg" alt="to jam logo">
             <h3 class=" text-center "> Sign up to Tojam BnB</h3>
             <div class="needs-validation " novalidate>
                 <!-- <div class="col-md-10 "> -->
