--- a/views/new_space.erb
+++ b/views/new_space.erb
@@ -1,4 +1,4 @@
-<form action="/spaces" method="post">
+<%# <form action="/spaces" method="post">
   <label> House Name 
     <input type="text" name="name" />
   </label><br>
@@ -24,4 +24,79 @@
   </label><br>
   
   <input type="submit" value="Submit" />
-</form>
+</form> %>
+<html>
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheet.css">
+  <title>MakersBnB!</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-sm navbar-light">
+    <!-- Container wrapper -->
+    <div class="container-fluid">
+      <!-- Collapsible wrapper -->
+      <div class="collapse navbar-collapse" id="navbarRightAlignExample">
+        <!-- Left links -->
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/">Welcome <%= %></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Spaces">Spaces</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/requests">Requests</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/signout">Sign Out</a>
+          </li>
+          <!-- <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
+                  >Disabled</a
+                >
+              </li> -->
+        </ul>
+        <!-- Left links -->
+      </div>
+      <!-- Collapsible wrapper -->
+    </div>
+    <!-- Container wrapper -->
+  </nav>
+
+  <form action="/spaces" method="post" class="new_space_form">
+    <h3 class="text-center" id="newspaceh3"> List your space</h3>
+    <label> House Name</label>
+    <input type="text" class="form-control "name="name">
+
+
+    <label class="form-label"> Description of house</label>
+    <input type="text" class="form-control " name="description">
+
+
+    <label class="form-label" > Price Per Night</label>
+    <input type="text" class="form-control " name="price_per_night">
+
+    <label for="start" class="form-label" >Date available from date:</label>
+    <input type="date" class="form-control "id="start" name="trip-start" value="2021-07-22" min="2021-08-18" max="2030-12-31">
+
+
+    <label for="start" class="form-label" >Date available to:</label>
+    <input type="date" class="form-control " id="end" name="trip-start" value="2021-07-22" min="2021-08-18" max="2030-12-31">
+
+    <div class='btnContainerNewSpace'>
+      <button class ="btn" type="submit" >List your space</button>
+    </div>
+  </form>
+
+</body>
+
+</html>
