not displaying requests

--- a/views/requests.erb
+++ b/views/requests.erb
@@ -1,5 +1,5 @@
 <ul>
-  <% @request.each do |request %>
+  <% @request.each do |request| %>
     <li>
      <%= request.user_id %>
      <%= request.space_id %>
