--- a/views/spaces.erb
+++ b/views/spaces.erb
@@ -4,7 +4,8 @@
   <% @space.each do |space| %>
     <li>
      <%= space.name %><br>
-     <%= space.description %>
+     <%= space.description %><br>
+     <%= space.price_per_night %>
     </li>
   <% end %>
 </ul>
