fixed homepaged checkboxes passwords

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -2,109 +2,115 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheet.css" type="text/css">
-    <title>MakersBnB!</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheet.css" type="text/css">
+  <title>MakersBnB!</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light">
-        <!-- Container wrapper -->
-        <div class="container-fluid">
-            <!-- Collapsible wrapper -->
-            <div class="collapse navbar-collapse" id="navbarRightAlignExample">
-                <!-- Left links -->
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Welcome</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Sign Up</a>
-                    </li>
-                    <!-- <li class="nav-item">
+  <nav class="navbar navbar-expand-sm navbar-light">
+    <!-- Container wrapper -->
+    <div class="container-fluid">
+      <!-- Collapsible wrapper -->
+      <div class="collapse navbar-collapse" id="navbarRightAlignExample">
+        <!-- Left links -->
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/">Welcome</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Sign Up</a>
+          </li>
+          <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
                   >Disabled</a
                 >
               </li> -->
-                </ul>
-                <!-- Left links -->
-            </div>
-            <!-- Collapsible wrapper -->
-        </div>
-        <!-- Container wrapper -->
-    </nav>
-
-
-    <div class=container id=homepage_form>
-    
-        <form action="/newaccount " method=post
-            oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match. " : " ")'
-            class="signup_form ">
-            <img id="logo" src="/img/tojam.jpg" alt="to jam logo">
-            <h3 class=" text-center "> Sign up to Tojam BnB</h3>
-            <div class="needs-validation " novalidate>
-                <!-- <div class="col-md-10 "> -->
-                    <label for="validationCustom01 " class="form-label ">First name</label>
-                    <input type="text " name="first_name " class="form-control " id="validationCustom01 "
-                        placeholder="First name " required>
-                    <div class="valid-feedback ">
-                        Looks good!
-                    </div>
-
-                    <label for="validationCustom02 " class="form-label ">Last name</label>
-                    <input type="text " name="last_name " class="form-control " id="validationCustom02 "
-                        placeholder="Surname " required>
-                    <div class="valid-feedback ">
-                        Looks good!
-                    </div>
-
-
-                    <label for="exampleInputEmail1 " class="form-label ">Email address</label>
-                    <input type="email " name="email " class="form-control " id="exampleInputEmail1 "
-                        placeholder="example@email.com" aria-describedby=" emailHelp ">
-
-                    <label for="exampleInputPassword1 " class="form-label ">Password</label>
-                    <input type="password " class="form-control " id="exampleInputPassword1 " placeholder="Password"
-                        required name=password>
-
-
-                    <label for=" exampleInputPassword2 " class="form-label ">Confirm Password</label>
-                    <input type="password " class="form-control " id="exampleInputPassword2 " name=password2>
-
-
-                    <!-- <div class="form-check "> -->
-                    <input class="form-check-input " type="checkbox " value=" " id="invalidCheck2 " required>
-                    <label class="form-check-label " for="invalidCheck2 ">
-                        Agree to terms and conditions
-                    </label>
-
-
-                    <div class="submitBtn">
-                        <button class="btn " type="submit ">Sign up</button>
-                    </div>
-
-                <!-- </div> -->
-            </div>
-        </form>
+        </ul>
+        <!-- Left links -->
+      </div>
+      <!-- Collapsible wrapper -->
     </div>
+    <!-- Container wrapper -->
+  </nav>
 
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js "
-        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj "
-        crossorigin="anonymous "></script>
+  <div class=container id=homepage_form>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+    <form action="/newaccount " method=post
+      oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match. " : " ")'
+      class="signup_form ">
+      <img id="logo" src="/img/tojam.jpg" alt="to jam logo">
+      <h3 class=" text-center "> Sign up to Tojam BnB</h3>
+
+      <div class="needs-validation " novalidate>
+        <!-- <div class="col-md-10 "> -->
+        <label for="validationCustom01 " class="form-label ">First name</label>
+        <input type="text " name="first_name " class="form-control " id="validationCustom01 " placeholder="First name "
+          required>
+        <div class="valid-feedback ">
+          Looks good!
+        </div>
+
+        <label for="validationCustom02 " class="form-label ">Last name</label>
+        <input type="text " name="last_name " class="form-control " id="validationCustom02 " placeholder="Surname "
+          required>
+        <div class="valid-feedback ">
+          Looks good!
+        </div>
+
+
+        <label for="exampleInputEmail1 " class="form-label ">Email address</label>
+        <input type="email " name="email " class="form-control " id="exampleInputEmail1 "
+          placeholder="example@email.com" aria-describedby=" emailHelp ">
+
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" required name="password">
+          </div>
+
+        <div class="mb-3">
+          <label for="exampleInputPassword2" class="form-label">Confirm Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword2" name="password2">
+        </div>
+
+      <div class="col-12">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+        <label class="form-check-label" for="invalidCheck">
+        Agree to terms and conditions
+      </label>
+      <div class="invalid-feedback">
+        You must agree before submitting.
+      </div>
+    </div>
+  </div>
+        
+        <div class="submitBtn">
+          <button class="btn " type="submit ">Sign up</button>
+        </div>
+
+      </div>
+    </form>
+  </div>
+
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js "
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj "
+    crossorigin="anonymous "></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js " integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js " integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/ " crossorigin="anonymous "></script>
     -->
