--- a/views/spaces.erb
+++ b/views/spaces.erb
@@ -1,5 +1,5 @@
-<html>
-
+<!doctype html>
+<html lang="en">
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  <link rel="stylesheet" href="public/stylesheet.css">
+  <link rel="stylesheet" href="/stylesheet.css">
   <title>MakersBnB!</title>
 </head>
 
@@ -32,26 +32,29 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Sign Out</a>
           </li>
-          <!-- <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
-                  >Disabled</a
-                >
-              </li> -->
         </ul>
-        <!-- Left links -->
       </div>
-      <!-- Collapsible wrapper -->
     </div>
-    <!-- Container wrapper -->
   </nav>
 
-<ul>
-  <% @space.each do |space| %>
-    <li>
-     <%= space.name %>
-    </li>
-  <% end %>
-</ul>
+
+<div class="containerSpaces">
+  <div class="jumbotron">
+    <div class="container">
+      <h2 class="display-5">Book a Space</h2>
+    </div>
+  </div>
+    
+  <div class= "card col-md-12">
+   <a href="/requests/new" class="list-group-item list-group-item-action align-items-start">
+     <% @space.each do |space| %>
+      <h5> <%= space.name %></h5>
+      <p><%= space.description %></p>
+      <small> Space will be available from: <%= space.date_available_from %> <small><br>
+      <%end%>
+  </a>
+  </div> 
+</div>
 
 
 </body>
